# QML_UI

./: CMakeLists.txt  File.gitignore  Main.qml  MenuScreen.qml  README.md  Screen1.qml  main.cpp  timerbackend.cpp  timerbackend.h
